Page change Function

--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -53,7 +53,7 @@
                         <h2 class="cards__titulo">Browse through the gallery.</h2>
                         <ul class="cards__lista">
                             <li class="card">
-                                <a href="imagem.html">
+                                <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
                                 </a>
                                 <span class="card__tag">Nebula</span>
