--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -1,19 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-pt">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to the Django</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-</head>
+{% block content %}
 
-<body>
     <div class="pagina-inicial">
         <header class="cabecalho">
             <img src="{% static 'assets\logo\Logo(2).png' %}" alt="Logo da KikaiCode" />
@@ -50,92 +39,17 @@
                 </section>
                 <section class="galeria">
                     <div class="cards">
-                        <h2 class="cards__titulo">Browse through the gallery.</h2>
+                        <h2 class="cards__titulo">Choose what class u wanna see</h2>
                         <ul class="cards__lista">
                             <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
                                 </a>
-                                <span class="card__tag">Nebula</span>
+                                <span class="card__tag">Type</span>
                                 <div class="card__info">
-                                    <p class="card__titulo">Pillars of Creation</p>
+                                    <p class="card__titulo">Class</p>
                                     <div class="card__texto">
-                                        <p class="card__descricao">NASA and ESA/Jeff Hester & Paul Scowen/NASA's Hubble Space Telescope</p>
-                                        <span>
-                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Stars</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">photo</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Source/Photographer/Satellite</p>
-                                        <span>
-                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Stars</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">photo</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Source/Photographer/Satellite</p>
-                                        <span>
-                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Stars</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">photo</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Source/Photographer/Satellite</p>
-                                        <span>
-                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Stars</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">photo</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Source/Photographer/Satellite</p>
-                                        <span>
-                                            <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
-                                <a href="imagem.html">
-                                    <img class="card__imagem" src="{% static 'assets/imagens/galeria/Hubble-Pillars-of-Creation.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Stars</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">photo</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Source/Photographer/Satellite</p>
+                                        <p class="card__descricao">Text/Text/Text</p>
                                         <span>
                                             <img src="{% static 'assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                                         </span>
@@ -148,17 +62,6 @@
             </section>
         </main>
     </div>
-    <footer class="rodape">
-        <div class="rodape__icones">
-            <a href="#" target=”_blank” >
-                <img src="{% static 'assets/ícones/1x/twitter.png' %}" alt="ícone twitter">
-            </a>
-            <a href="#" target=”_blank” >
-                <img src="{% static 'assets/ícones/1x/instagram.png' %}" alt="ícone instagram">
-            </a>
-        </div>
-        <p class="rodape__texto">Curso de Python Avançado - DJANGO</p>
-    </footer>
-</body>
 
-</html>
+    {% include 'partials/_footer.html' %}
+{% endblock %}
