--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'galeria/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -15,10 +15,10 @@
         <main class="principal">
             <section class="menu-lateral">
                 <nav class="menu-lateral__navegacao">
-                    <a href="{% url 'index' %}"><img src="{% static 'assets/ícones/1x/Home - ativo.png' %}"> Home</a>
-                    <a href="#"><img src="{% static 'assets/ícones/1x/Mais vistas - inativo.png' %}"> BigBang</a>
-                    <a href="#"><img src="{% static 'assets/ícones/1x/Novas - inativo.png' %}"> Space</a>
-                    <a href="#"><img src="{% static 'assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Galaxy</a>
+                    <a href="{% url 'index' %}"><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}"> Home</a>
+                    <a href="{% url 'login' %}"><img src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"> Login</a>
+                    <a href="{% url 'registo' %}"><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}"> Registo</a>
+                    <a href="#"><img src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"> Logout</a>
                 </nav>
             </section>
             <section class="conteudo">
@@ -39,5 +39,5 @@
         </main>
     </div>
 
-    {% include 'partials/_footer.html' %}
+    {% include 'galeria/partials/_footer.html' %}
 {% endblock %}
